<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/etNombre"
                    android:textColorHint="@color/colorPrimaryText"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvFecha"
                    android:id="@+id/tvFecha"
                    android:textSize="20sp"
                    android:textColorHint="@color/colorPrimaryText"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints">


                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/etTelefono"
                    android:textColorHint="@color/colorPrimaryText"
                    android:inputType="phone"
                    tools:ignore="LabelFor"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints">


                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/etMail"
                    android:textColorHint="@color/colorPrimaryText"
                    tools:ignore="LabelFor"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/etDescripcion"
                    android:textColorHint="@color/colorPrimaryText"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnSiguiente"
            android:textColor="@color/colorPrimaryText"
            android:background="@color/colorAccent"
            android:importantForAutofill="auto"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>